--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "webgpt server",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -18,7 +19,9 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "openai": "^4.28.4"
+    "openai": "^4.38.5",
+    "zlib": "^1.0.5"
   }
 }
