--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "axios": "10.2.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "openai": "^4.38.5",
     "zlib": "^1.0.5"
   },
   "engines": { "node": "16.x" }
