--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "axios": "10.2.4",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "zlib": "^1.0.5"
