--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
   "dependencies": {
-    "cors": "^2.8.5",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "openai": "^4.43.0",
     "zlib": "^1.0.5"
   },
-  "engines": { "node": "16.x" }
+  "engines": {
+    "node": "16.x"
+  }
 }
